@@ -27,7 +27,7 @@
 #define CONFIGURE_MAXIMUM_SEMAPHORES	20
 #define CONFIGURE_MAXIMUM_TASKS		20
 
-#define CONFIGURE_MICROSECONDS_PER_TICK	10000
+#define CONFIGURE_MICROSECONDS_PER_TICK	1000
 
 #define CONFIGURE_INIT_TASK_STACK_SIZE	(10*1024)
 #define CONFIGURE_INIT_TASK_PRIORITY	100
